fix: hide scrollbar on vertical slider

--- a/pages/photography/index.scss
+++ b/pages/photography/index.scss
@@ -27,6 +27,7 @@
             background: #000;
             margin-right: -20px;
             padding-right: 20px;
+            box-sizing: content-box;
         }
 
         // animation: fadeIn 1s cubic-bezier(0.28, 0.11, 0.32, 1) 0.3s;
